final changes to 4.bonus rounds

--- a/3. Facial Keypoint Detection, Complete Pipeline.ipynb
+++ b/3. Facial Keypoint Detection, Complete Pipeline.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Face and Facial Keypoint detection\n",
+    "# Face and Facial Keypoint detection\n",
     "\n",
     "After you've trained a neural network to detect facial keypoints, you can then apply this network to *any* image that includes faces. The neural network expects a Tensor of a certain size as input and, so, to detect any face, you'll first have to do some pre-processing.\n",
     "\n",
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Select an image \n",
+    "### Select an image \n",
     "\n",
     "Select an image to perform facial keypoint detection on; you can select any image of faces in the `images/` directory."
    ]
